# Project-Aeternus

./: Cargo.toml
aeternus/: AGENTS.md  Cargo.toml
aeternus/deploy/: Dockerfile  entrypoint.sh  runpod_setup.sh
aeternus/shaders/: activation.comp  activation.spv  fused_gemv.comp  fused_gemv.glsl  fused_gemv.spv  fused_vq_sign.comp  fused_vq_sign.spv  pim_sign_regen.comp  pim_sign_regen.spv  swar_extract.comp  swar_extract.spv
aeternus/src/: bench_fused.rs  bench_gemv.rs  benchmark.rs  binary_factor.rs  codebook.rs  hadamard.rs  headless.rs  ingestor.rs  lease.rs  main.rs  mesh.rs  micro_model.rs  prefetch.rs  seed_engine.rs  sign_aligner.rs
aeternus/src/vulkan_fabric/: activation_pipeline.rs  buffer.rs  fused_pipeline.rs  gemv_pipeline.rs  mod.rs  pipeline.rs  swar_pipeline.rs
